# rc_dynamics_api

./: .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
cmake/: PROJECTConfig.cmake.in
cmake/Modules/: FindProtocolBuffers.cmake
examples/: CMakeLists.txt  simple_receiver.cc  test_slam.cc
rc_dynamics_api/: CMakeLists.txt  data_receiver.h  msg_utils.h  net_utils.cc  net_utils.h  pose_interface.h  remote_interface.cc  remote_interface.h  socket_exception.cc  socket_exception.h  trajectory_time.cc  trajectory_time.h  unexpected_receive_timeout.cc  unexpected_receive_timeout.h
rc_dynamics_api/opt/: CMakeLists.txt
rc_dynamics_api/roboception/msgs/: pose.proto
rcvinsapi/: CMakeLists.txt  net_utils.h  pose_interface.cc  pose_interface.h
rcvinsapi/roboception/msgs/: CMakeLists.txt  dynamics.proto  frame.proto  imu.proto  pose_stamped.proto  quaternion.pb.h  quaternion.proto  time.pb.h  time.proto  vector3d.pb.h  vector3d.proto
roboception/msgs/: frame.pb.cc  frame.pb.h  pose.pb.cc  pose.pb.h  pose_stamped.pb.cc  pose_stamped.pb.h  quaternion.pb.cc  time.pb.cc  vector3d.pb.cc
tools/: CMakeLists.txt  csv_printing.h  rcdynamics_stream.cc  vins_stream.cc
